colcon_ws/log/build_2022-09-10_03-41-39/dasc_robot/stdout_stderr.log
-- Found ament_cmake: 0.9.9 (/opt/ros/foxy/share/ament_cmake/cmake)
-- Using PYTHON_EXECUTABLE: /usr/bin/python3
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 2.4.0 (/opt/ros/foxy/share/rclcpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Found rosidl_adapter: 1.2.1 (/opt/ros/foxy/share/rosidl_adapter/cmake)
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 1.0.3 (/opt/ros/foxy/share/rmw_implementation_cmake/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found tf2: 0.13.12 (/opt/ros/foxy/share/tf2/cmake)
-- Found tf2_ros: 0.13.12 (/opt/ros/foxy/share/tf2_ros/cmake)
-- Found px4_msgs: 2.0.1 (/root/colcon_ws/install/px4_msgs/share/px4_msgs/cmake)
-- Found sensor_msgs: 2.0.4 (/opt/ros/foxy/share/sensor_msgs/cmake)
-- Found eigen3_cmake_module: 0.1.1 (/opt/ros/foxy/share/eigen3_cmake_module/cmake)
-- Found px4_ros_com: 0.1.0 (/root/colcon_ws/install/px4_ros_com/share/px4_ros_com/cmake)
-- Configuring done
-- Generating done
-- Build files have been written to: /root/colcon_ws/build/dasc_robot
[ 12%] Built target dascBots
[35m[1mScanning dependencies of target joystick_controller[0m
[ 75%] Built target example_control_geometric_velocity
[ 75%] Built target example_control
[ 75%] Built target example_control_geometric_acceleration
[ 75%] Built target example_control_multi_rover
[ 75%] Built target example_control_geometric
[ 87%] Built target dasc_robot_lib
[ 93%] [32mBuilding CXX object CMakeFiles/joystick_controller.dir/src/joystick_control.cpp.o[0m
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp: In constructor ‘JoystickController::JoystickController(std::shared_ptr<DASCRobot>)’:
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:20:61: error: ‘_1’ was not declared in this scope; did you mean ‘std::placeholders::_1’?
   20 |         &std::bind(&JoystickController::joy_callback, this, _1));
      |                                                             ^~
      |                                                             std::placeholders::_1
In file included from /opt/ros/foxy/include/rclcpp/context.hpp:19,
                 from /opt/ros/foxy/include/rclcpp/contexts/default_context.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:32,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:26,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /root/colcon_ws/src/robot-framework/include/dasc_robot/DASCRobots.hpp:6,
                 from /root/colcon_ws/src/robot-framework/src/joystick_control.cpp:2:
/usr/include/c++/9/functional:211:34: note: ‘std::placeholders::_1’ declared here
  211 |     extern const _Placeholder<1> _1;
      |                                  ^~
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp: In member function ‘void JoystickController::joy_callback(sensor_msgs::msg::Joy)’:
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:49:43: warning: unused parameter ‘msg’ [-Wunused-parameter]
   49 |   void joy_callback(sensor_msgs::msg::Joy msg){
      |                     ~~~~~~~~~~~~~~~~~~~~~~^~~
make[2]: *** [CMakeFiles/joystick_controller.dir/build.make:63: CMakeFiles/joystick_controller.dir/src/joystick_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:308: CMakeFiles/joystick_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
